--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@ permalink: /
         {% include/panel.html %}
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-12">
+        {% include/panel.html %}
+      </div>
+    </div>
   </div>
 </body>
 </html>
